--- a/Style.css
+++ b/Style.css
@@ -14,9 +14,13 @@ header .fotoPaginaPrincipal .tituloprincipal {
     text-align: center;
     color:#FBCF00;
     font-size: 200%;
-    font-family: 'Source Sans Pro', sans-serif;;
+    font-family: 'Source Sans Pro', sans-serif;
 }
-
+h1 {
+    font-size: 160%;
+    margin-right: 400px;
+    text-align: start;
+}
 nav {
     list-style: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -24,6 +28,7 @@ nav {
     font-size: 100%;
     z-index: 1000;
     text-align: center;
+    background-color: #7D7D7D;
 }
 
 nav ul li {
@@ -40,6 +45,7 @@ nav ul li a {
     font-size: 100%;
     margin: 5%;
     text-align: center;
+    padding: 0%;
 }
 section h1 {
     color: #FBCF00;
@@ -125,15 +131,9 @@ Ol
     min-height: 100vh;
 }
 
-.nuestrosClientes {
-    display: flex;
-    flex-direction: initial;
-    padding: 10em;
-    justify-content:center; 
-}
-
-.barraInicio li a:hover {
+li a:hover {
     background-color:#FBCF00;
+    color: black;
 }
 
 .imagenInstitucional {
@@ -141,22 +141,20 @@ Ol
     justify-content: center;
     margin-left: 20%;
     align-content: center;
-    transform: rotate(15deg);
 }
 
 .redesSociales {
     text-decoration: none;
     color: black;
     font-size: 2rem;
+    text-align: center;
 }
 
 .tablaHormigon {
     display: flex;
     justify-content: flex-end;
 }
-.productos {
-    font-size: 200%;
-}
+
 
 .grillaProyectos {
     display: grid;
@@ -249,31 +247,40 @@ Ol
     text-align:left;
 }
 
-.grillaNav {
-    display: grid;
-    grid-template-columns: 10% 20% 70%;
-    grid-template-rows: 10%;
-    grid-template-areas: "logo redes menu";
-    background-image: linear-gradient(to bottom, #7d7d7d, #f0e9e9);
-}
-
 .barraInicio {
     grid-area: menu ;
     justify-self: end;
     text-align: end;
     margin-top: 50px;
 }
-
-.redes {
-    grid-area: redes;
-    justify-self: start;
-    text-align: start;
+.grilla {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 8% 82%  10% ;
+    grid-template-areas: "nav"
+                         "main"
+                         "footer";
 }
 
-.imgLogo {
-    grid-area: logo;
+header {
+    grid-area: nav;
 }
 
-a img {
-    width: 100%; height: 1000%;
+main {
+    grid-area: main;
+}
+
+footer {
+    grid-area: footer;
+}
+.row {
+    text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: black;
+    padding: 0%;
+}
+
+.container {
+    padding: 0px;
 }
