--- a/Style.css
+++ b/Style.css
@@ -278,9 +278,11 @@ footer {
     text-align: center;
     font-family: 'Source Sans Pro', sans-serif;
     color: black;
-    padding: 0%;
 }
 
-.container {
-    padding: 0px;
+@media only screen and ( max-width:768px) {
+    .imagenesclientes {
+        margin-left: 20%;
+    }
+    
 }
