--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -62,3 +62,11 @@ main .proyectosRealizados p {
 @media only screen and (max-width: 380px) {
   .img-responsive {
     width: 5%; } }
+
+.tituloOriginal, .tituloCopia {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 200%;
+  background-color: gray; }
+
+.tituloCopia {
+  background: green; }
